# water-detection-methods

./: .gitattributes  .gitignore  AGENTS.md  PLAN.md  README.md  main.py  notebook.ipynb  pyproject.toml  requirements.txt
apps/: predict.py  predict_gui.py  predict_gui_modern.py  threshold_gui.py
modal_notebooks/: 03-deep-learning-unet++-_trained_on_nvidia_l4.ipynb  03-deep-learning-unet-fixed.ipynb
models/: unet_water_v2_best.pt
models/Unet/: unet_water_v2_best_modal.pt
models/Unet++/: unet++_resnet18_512_best_trained_on_modal_l4.pt
models/Unet_resnet18/: unet_resnet18_512_best.pt  unet_resnet18_512_best_trained_on_modal_t4.pt
notebooks/: 00_exploration_dataset.ipynb  01_baseline_seuillage.ipynb  02_ml_classique.ipynb  02_ml_classique_features_xy_dataset_split.ipynb  02_ml_classique_image_level_split.ipynb  03_deep_learning_resnet_encoder.ipynb  03_deep_learning_unet++.ipynb  03_deep_learning_unet.ipynb  04_test_laverie_overflow.ipynb
src/water_detection_methods/: __init__.py  baselines.py  data.py  inference.py  metrics.py  model.py  overflow.py  paths.py  visualization.py
