[project]
name = "water-detection-methods"
version = "0.1.0"
description = "Ce projet a pour objectif de developper un systeme intelligent capable de detecter l'eau dans des images issues de cameras"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=7.3.0",
    "keras>=3.15.0",
    "matplotlib>=3.11.0",
    "numpy>=2.5.1",
    "opencv-python>=5.0.0.93",
    "pandas>=3.0.3",
    "pillow>=12.3.0",
    "scikit-learn>=1.9.0",
    "segmentation-models-pytorch>=0.5.0,<0.6",
    "tensorflow>=2.21.0",
    "torch==2.12.1",
    "torchvision==0.27.1",
]

[tool.uv.sources]
torch = { index = "pytorch-cu126" }
torchvision = { index = "pytorch-cu126" }

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[dependency-groups]
dev = [
    "modal>=1.5.2",
]
